# bo_nalog

./: .env.example  .gitignore  README.md  pyproject.toml
compose/django/: Dockerfile  default_locale  entrypoint.sh
compose/django/commands/: celery_beat.sh  celery_load_files.sh  celery_load_pages.sh  celery_main.sh  cron.sh  cron_load_statements.sh  web.sh  web_asgi.sh
compose/nginx/: Dockerfile
docs/: Api-сервис ГИР БО.docx  NO_BOUPR_1_159_00_05_03_01.xsd  NO_BUHOTCH_1_105_00_05_08_02.xsd  Описание видов файлов.docx  Формат NO_BOUPR_1_159_00_05_03_01.doc  Формат NO_BUHOTCH_1_105_00_05_08_01СКВ.doc
src/bfo/: __init__.py  admin.py  apps.py  fields.py  models.py  serializers.py  tasks.py  validators.py
src/bfo/management/commands/: load_statements.py  (+1 more)
src/bfo/migrations/: 0001_initial.py  0002_fill_dictionary_and_form.py  0003_create_superuser_and_setting.py  0004_page_and_files_models.py  0005_delete_statement_dictionary_object.py  0006_add_index_for_token.py  0007_auto_20210723_1210.py  0008_auto_20210723_1321.py  0009_temporaryinn.py  0010_auto_20210909_1542.py  0011_auto_20210910_1048.py  0012_auto_20210910_1249.py  0013_auto_20211110_1109.py  0014_auto_20211110_1512.py
src/bfo/tests/: test_api_endpoints.py  test_statement_transformer.py  test_statements_loader.py
src/bfo/urls/: __init__.py  async_urls.py
src/bfo/views/: async_views.py
src/project/: __init__.py  asgi.py  celery.py  urls.py
src/project/services/: aiohttp_tool.py  file_response.py  proxies.py  user_agent.py
src/project/settings/: __init__.py  celery.py  common.py
(+30 files in other folders)
